--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <h2 style="font-size: 1.5rem;justify-content: center;
       align-items: center;">ITLadkrabangOpenhouse</h2>
       <h4 style="font-size: 1rem;justify-content: center;
-            align-items: center; margin-top: 0;">2022 , 2023(Head)</h4>
+            align-items: center; margin-top: 0;">2022 , 2023</h4>
     </div>
 
     <!-- IT ASA 10, IT ASA 11 -->
