--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="nav-items">
       <a href="#me1">Home</a>
       <a href="#me2">About Me</a>
-      <a href="#me3">Experience</a>
+      <a href="#me3">Work Experience</a>
       <a href="#me4">Activities</a>
       <a href="#me5">Academy Projects</a>
 
