--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
 </head>
 
 <body>
   <nav>
-    <div style="margin-left: 1rem; width: calc(100% - 1.5rem);">
+    <div class="head">
       My Portfolio
     </div>
     <div class="nav-items">
       <a href="#me1">Home</a>
       <a href="#me2">About Me</a>
-      <a href="#me3">Work Experience</a>
-      <a href="#me4">Activities</a>
+      <a href="#me3">Experience</a>
       <a href="#me5">Academy Projects</a>
 
     </div>
   </nav>
 
   <section id="header1">
-    <div class="header-inner" id="me1">
-      Hello My Name is <n>Parin Dechakorn
-        <div style="font-size: 2rem; margin: 1rem;">I’m interested in UX/UI Design
-        </div>
+    <div class="header-inner1" id="me1">
+      Nice to see you.
+        <div class="header-inner2"  id="me2">Hi! My name is TonNam.</div>
+        <div class="header-inner3"  id="me3">I’m interested in UX/UI Design.</div>
     </div>
   </section>
 
@@ -42,7 +42,7 @@
   <!-- about me -->
   <section class="article_1" id="me2">
     <div class="text">
-      <h2 style="font-size: 3rem;">About Me</h2>
+      <h2 style="font-size: 3rem;" >About Me</h2>
       <h2 style="font-size: 2.1rem;">Parin Dechakorn [TonNam]</h2>
       <h2 style="font-size: 1.5rem; padding-bottom: 1rem;">Multimedia , IT KMITL Student </h2>
       <h3 style="font-size: 1rem; 
@@ -66,9 +66,36 @@
     </div>
   </section>
 
+  <section class="article_7" id="me2">
+    <div class="pic_h">
+      <img class="pic_me" src="img/me_6.jpg">
+    </div>
+    <div class="text">
+      <h2 style="font-size: 3rem;" >About Me</h2>
+      <h2 style="font-size: 2.1rem;">Parin Dechakorn [TonNam]</h2>
+      <h2 style="font-size: 1.5rem; padding-bottom: 1rem;">Multimedia , IT KMITL Student </h2>
+      <h3 style="font-size: 1rem; 
+      line-height:30px;
+      font-family: 'PT Serif', serif;
+      font-family: 'Roboto Slab', serif;">
+        <p>
+          I am a student of the Information Technology 's Multimedia . King Mongkut's Institute of Technology
+          Ladkrabang.
+          I can do Front End development with use UX/UI design principles for website development. and I have basic in
+          using the Maya program to create 3D models, including use Unreal Engine 5 at a moderate level. I am a person
+          who
+          interacts well and is friendly with others. I am always determined and out in the effort to learn new things.
+      </h3>
+      <a href="img/Resume.pdf" download="Resume" target="_blank">
+        <button class="button button1">My Resume</button>
+      </a>
+    </div>
+
+  </section>
+
 
   <!-- Work Experience -->
-  <h2 class="head_text" id="me3">
+  <h2 class="head_text" id="me5">
     Work Experience
   </h2>
 
@@ -89,88 +116,13 @@
   </section>
 
 
-  <!-- Activies -->
-  <h2 class="head_text" style="background-color: rgb(255, 255, 255);" id="me4">
-    Activies
-  </h2>
-  <section class="article_3">
-
-    <div class="pic_h">
-      <div class="image-container">
-        <img class="pic_photo image" src="img/at1.jpg">
-        <img class="pic_photo hidden-image" src="img/at8.jpg">
-      </div>
-      <h2 style="font-size: 1.5rem;justify-content: center;
-      align-items: center;">Register</h2>
-      <h4 style="font-size: 1rem;justify-content: center;
-      align-items: center; margin-top: 0;">at Prepro65 ,TobeIT66 , Sairahut 11 , Unite Camp 5</h4>
-    </div>
-
-    <div class="pic_h">
-      <div class="image-container">
-        <img class="pic_photo image" src="img/at3.jpg">
-        <img class="pic_photo hidden-image" src="img/at13.jpg">
-      </div>
-      <h2 style="font-size: 1.5rem;justify-content: center;
-      align-items: center;">Secretary Head</h2>
-      <h4 style="font-size: 1rem;justify-content: center;
-      align-items: center; margin-top: 0;">at TobeIT67</h4>
-    </div>
-
-    <!-- ITLadkrabangOpenhouse -->
-    <div class="pic_h">
-      <div class="image-container">
-        <img class="pic_photo image" src="img/at4.jpg">
-        <img class="pic_photo hidden-image" src="img/me_5.jpg">
-      </div>
-      <h2 style="font-size: 1.5rem;justify-content: center;
-      align-items: center;">ITLadkrabangOpenhouse</h2>
-      <h4 style="font-size: 1rem;justify-content: center;
-            align-items: center; margin-top: 0;">2022 , 2023</h4>
-    </div>
-
-    <!-- IT ASA 10, IT ASA 11 -->
-    <div class="pic_h">
-      <div class="image-container">
-        <img class="pic_photo image" src="img/at6.jpg">
-        <img class="pic_photo hidden-image" src="img/at14.jpg">
-      </div>
-      <h2 style="font-size: 1.5rem;justify-content: center;
-      align-items: center;">Volunteer </h2>
-      <h4 style="font-size: 1rem;justify-content: center;
-            align-items: center; margin-top: 0;">at IT ASA 10, IT ASA 11</h4>
-    </div>
-
-    <!-- Teacher Assistant "Game Site" -->
-    <div class="pic_h">
-      <div class="image-container">
-        <img class="pic_photo image" src="img/at10.jpg">
-        <img class="pic_photo hidden-image" src="img/at12.jpg">
-      </div>
-      <h2 style="font-size: 1.5rem;justify-content: center;
-      align-items: center;">Teacher Assistant "Game Site"</h2>
-      <h4 style="font-size: 1rem;justify-content: center;
-            align-items: center; margin-top: 0;">at IT CAMP 19</h4>
-    </div>
-
-    <!-- สันทนาการ -->
-    <div class="pic_h">
-      <div class="image-container">
-        <img class="pic_photo image" src="img/at11.jpg">
-        <img class="pic_photo hidden-image" src="img/at5.jpg">
-      </div>
-      <h2 style="font-size: 1.5rem;justify-content: center;
-      align-items: center;">Recreation Activities</h2>
-      <h4 style="font-size: 1rem;justify-content: center;
-            align-items: center; margin-top: 0;">at IT CAMP 18</h4>
-    </div>
-
-  </section>
 
   <!-- Lunar Gateway -->
   <h2 class="head_text" style="background-color: rgb(255, 255, 255);" id="me5">
     Academy Projects
   </h2>
+
+
   <section class="article_4">
     <div>
       <div class="image-container">
@@ -225,15 +177,15 @@
     <!-- Alchemist Quest -->
     <div>
       <div class="image-container">
-        <img class="pic_photo image" src="img/pj7.png">
-        <img class="pic_photo hidden-image" src="img/pj8.png">
+        <img class="pic_photo image" src="img/pj9.png">
+        <img class="pic_photo hidden-image" src="img/pj10.png">
       </div>
       <div style="text-align: center;">
-        <a href="https://youtu.be/vFCDg8AToK4" target="_blank">
-          <p style="font-size: 1.5rem;">Demo Geme “Alchemist Quest”</p>
+        <a href="https://www.figma.com/proto/4RFC6W1inQDxcTXBmZ25Oj/Prototype?type=design&node-id=24-625&t=kZR9OSPpFwnlYsOZ-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=24%3A625" target="_blank">
+          <p style="font-size: 1.5rem;">Shopping App Design “Hiwwee”</p>
         </a>
         <h2 style="font-size: 1rem;;
-        align-items: center;">Create Game by Unreal Engine 4.27</h2>
+        align-items: center;">Create by Figma</h2>
         <h2 style="font-size: 1rem;;
       align-items: center;">3rd year project</h2>
       </div>
