--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="nav-items">
       <a href="#me1">Home</a>
       <a href="#me2">About Me</a>
-      <a href="#me3">Experience</a>
+      <a href="#me4">Experience</a>
       <a href="#me5">Academy Projects</a>
 
     </div>
@@ -95,12 +95,12 @@
 
 
   <!-- Work Experience -->
-  <h2 class="head_text" id="me5">
+  <h2 class="head_text" id="me4">
     Work Experience
   </h2>
 
   <section class="article_2" style="background-color: rgb(255, 255, 255);">
-    <div class="pic_h">
+    <div class="pic_h ">
       <div class="image-container">
         <img class="pic_photo image" src="img/smo1.jpg">
         <img class="pic_photo hidden-image" src="img/smo3.jpg">
@@ -123,12 +123,13 @@
   </h2>
 
 
-  <section class="article_4">
+  <section class="article_4" >
     <div>
+      <a href="https://niflheim-project-multimedia.netlify.app/index.html" target="_blank">
       <div class="image-container">
         <img class="pic_photo image" src="img/pj1_1.png">
         <img class="pic_photo hidden-image" src="img/pj2_1.png">
-      </div>
+      </div></a>
       <div style="text-align: center;">
         <a href="https://niflheim-project-multimedia.netlify.app/index.html" target="_blank">
           <p style="font-size: 1.5rem;">Landing Page and Geme Website “Lunar Gateway”</p>
@@ -142,10 +143,11 @@
 
     <!-- Adibas Cafe -->
     <div>
+      <a href="https://478a440a-a262-413d-9763-0cb60cb81df8-00-1encwzfp5vzuj.worf.replit.dev/" target="_blank">
       <div class="image-container">
         <img class="pic_photo image" src="img/pj3.png">
         <img class="pic_photo hidden-image" src="img/pj4.png">
-      </div>
+      </div></a>
       <div style="text-align: center;">
         <a href="https://478a440a-a262-413d-9763-0cb60cb81df8-00-1encwzfp5vzuj.worf.replit.dev/" target="_blank">
           <p style="font-size: 1.5rem;">Shopping Website “Adibas Cafe” Frontend Website”</p>
@@ -159,10 +161,11 @@
 
     <!-- Left Over -->
     <div>
+      <a href="https://main--leftoverproject.netlify.app/" target="_blank">
       <div class="image-container">
         <img class="pic_photo image" src="img/pj5.png">
         <img class="pic_photo hidden-image" src="img/pj6.png">
-      </div>
+      </div></a>
       <div style="text-align: center;">
         <a href="https://main--leftoverproject.netlify.app/" target="_blank">
           <p style="font-size: 1.5rem;">SDG Website “Left Over” Frontend Website</p>
@@ -176,10 +179,12 @@
 
     <!-- Alchemist Quest -->
     <div>
-      <div class="image-container">
+      <a href="https://www.figma.com/proto/4RFC6W1inQDxcTXBmZ25Oj/Prototype?type=design&node-id=24-625&t=kZR9OSPpFwnlYsOZ-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=24%3A625" target="_blank">
+      <div class="image-container" >
         <img class="pic_photo image" src="img/pj9.png">
         <img class="pic_photo hidden-image" src="img/pj10.png">
       </div>
+    </a>
       <div style="text-align: center;">
         <a href="https://www.figma.com/proto/4RFC6W1inQDxcTXBmZ25Oj/Prototype?type=design&node-id=24-625&t=kZR9OSPpFwnlYsOZ-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=24%3A625" target="_blank">
           <p style="font-size: 1.5rem;">Shopping App Design “Hiwwee”</p>
