--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
   <section class="article_2" style="background-color: rgb(255, 255, 255);">
     <div class="pic_h ">
       <div class="image-container">
-        <img class="pic_photo image" src="img/smo1.jpg">
-        <img class="pic_photo hidden-image" src="img/smo3.jpg">
+        <img class="pic_photo image" style="cursor: default;" src="img/smo1.jpg">
+        <img class="pic_photo hidden-image"  style="cursor: default;" src="img/smo3.jpg">
       </div>
-      <h2 style="font-size: 1.3rem;justify-content: center;
+      <h2 style="font-size: 1.3rem;justify-content: center; 
       align-items: center;">Secretary IT Student Association 2022 & 2023</h2>
     </div>
     <div class="pic_h">
-      <img class="pic_photo" src="img/work1.jpg">
+      <img class="pic_photo"  style="cursor: default;"src="img/work1.jpg">
       <h2 style="font-size: 1.3rem;justify-content: center;
       align-items: center;">Teacher Assistant Multimedia Technology</h2>
     </div>
