--- a/index.html
+++ b/index.html
@@ -119,7 +119,25 @@
   <h2 class="head_text" style="background-color: rgb(255, 255, 255);" id="me5">
     Academy Projects
   </h2>
+
   <section class="article_4" >
+    <div>
+      <a href="" target="_blank">
+      <div class="image-container">
+        <img class="pic_photo image" src="img/pj1_1.png">
+        <img class="pic_photo hidden-image" src="img/pj2_1.png">
+      </div></a>
+      <div style="text-align: center;">
+        <a href="" target="_blank">
+          <p style="font-size: 1.5rem;">Landing Page and Geme Website “Lunar Gateway”</p>
+        </a>
+        <h2 style="font-size: 1rem;;
+          align-items: center;">Create website by using HTML, CSS, JS</h2>
+        <h2 style="font-size: 1rem;;
+        align-items: center;">1st year project</h2>
+      </div>
+    </div>
+
     <!-- Adibas Cafe -->
     <div>
       <a href="https://478a440a-a262-413d-9763-0cb60cb81df8-00-1encwzfp5vzuj.worf.replit.dev/" target="_blank">
